--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,14 @@ version = '1.0.0-SNAPSHOT'
 
 dependencies {
     implementation group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.21.v20190926'
+    implementation 'org.eclipse.jetty:jetty-servlet:9.4.21.v20190926'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.8.0-beta4'
 
     // Use the latest Groovy version for Spock testing
     testImplementation 'org.codehaus.groovy:groovy-all:2.5.7'
+    testImplementation group: 'org.codehaus.groovy.modules.http-builder', name: 'http-builder', version: '0.7.1'
 
-    // Use the awesome Spock testing and specification framework even with Java
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
     testImplementation 'junit:junit:4.12'
+
 }
