--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java-library'
     id 'groovy'
+    id "org.jetbrains.kotlin.jvm" version "1.3.50"
 }
 
 repositories {
@@ -15,6 +16,7 @@ dependencies {
     implementation group: 'io.undertow', name: 'undertow-core', version: '2.0.27.Final'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.28'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
     // Use the latest Groovy version for Spock testing
     testImplementation 'org.codehaus.groovy:groovy-all:2.5.7'
