--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,9 +9,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+
     - name: Set up JDK 1.11
       uses: actions/setup-java@v1
       with:
         java-version: 1.11
+
     - name: Build with Gradle
       run: ./gradlew build
+
+    - name: Report to Codecov
+      uses: codecov/codecov-action@v1.0.3
+      with:
+        token: ${{secrets.CODECOV_TOKEN}}
+        file: build/reports/jacoco/test/jacocoTestReport.xml
+
