--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,11 @@
 plugins {
     id 'java-library'
     id 'groovy'
+    id 'jacoco'
     id "org.jetbrains.kotlin.jvm" version "1.3.50"
 }
+
+apply plugin: 'idea'
 
 repositories {
     mavenCentral()
@@ -11,6 +14,26 @@ repositories {
 
 group = 'io.github.Chase22.telegram'
 version = '1.0.0-SNAPSHOT'
+
+sourceSets {
+    integrationTest {
+        compileClasspath += sourceSets.main.output
+        runtimeClasspath += sourceSets.main.output
+    }
+}
+
+idea {
+    module {
+        sourceDirs -= project.sourceSets.integrationTest.groovy.srcDirs
+        testSourceDirs += project.sourceSets.integrationTest.groovy.srcDirs
+        testSourceDirs += project.sourceSets.integrationTest.resources.srcDirs
+    }
+}
+
+configurations {
+    integrationTestImplementation.extendsFrom implementation
+    integrationTestRuntimeOnly.extendsFrom runtimeOnly
+}
 
 dependencies {
     implementation group: 'io.undertow', name: 'undertow-core', version: '2.0.27.Final'
@@ -21,8 +44,34 @@ dependencies {
     // Use the latest Groovy version for Spock testing
     testImplementation 'org.codehaus.groovy:groovy-all:2.5.7'
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
+    testImplementation 'org.objenesis:objenesis:3.0.1'
+    testImplementation 'cglib:cglib-nodep:3.2.9'
     testImplementation 'junit:junit:4.12'
 
     testImplementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.12.1'
 
+    integrationTestImplementation 'org.codehaus.groovy:groovy-all:2.5.7'
+    integrationTestImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
+    integrationTestImplementation 'junit:junit:4.12'
+
+    integrationTestImplementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.12.1'
+}
+
+task integrationTest(type: Test) {
+    description = 'Runs integration tests.'
+    group = 'verification'
+
+    testClassesDirs = sourceSets.integrationTest.output.classesDirs
+    classpath = sourceSets.integrationTest.runtimeClasspath
+    shouldRunAfter test
+}
+
+check.dependsOn integrationTest
+
+jacocoTestReport {
+    reports {
+        html.enabled true
+        xml.enabled true
+        csv.enabled true
+    }
 }
