--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,5 +22,5 @@ jobs:
       uses: codecov/codecov-action@v1.0.3
       with:
         token: ${{secrets.CODECOV_TOKEN}}
-        file: ../build/reports/jacoco/test/jacocoTestReport.xml
+        file: ./build/reports/jacoco/test/jacocoTestReport.xml
 
