--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,3 +22,5 @@ jobs:
       uses: codecov/codecov-action@v1.0.3
       with:
         token: ${{secrets.CODECOV_TOKEN}}
+        file: ./jacocoTestReport.xml
+
