actually write test report

--- a/build.gradle
+++ b/build.gradle
@@ -75,3 +75,7 @@ jacocoTestReport {
         xml.destination = file("${projectDir}/jacocoTestReport.xml")
     }
 }
+
+test {
+    finalizedBy jacocoTestReport
+}
