--- a/build.gradle
+++ b/build.gradle
@@ -36,10 +36,14 @@ configurations {
 }
 
 dependencies {
-    implementation group: 'io.undertow', name: 'undertow-core', version: '2.0.27.Final'
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.28'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.0'
+    implementation 'io.undertow:undertow-core:2.0.27.Final'
+    implementation 'org.slf4j:slf4j-api:1.7.28'
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.7'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
 
     // Use the latest Groovy version for Spock testing
     testImplementation 'org.codehaus.groovy:groovy-all:2.5.7'
