--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ repositories {
 group = 'io.github.Chase22.telegram'
 version = '1.0.0-SNAPSHOT'
 
+final JACKSON_VERSION = '2.10.0'
+
 sourceSets {
     integrationTest {
         compileClasspath += sourceSets.main.output
@@ -39,8 +41,8 @@ dependencies {
     implementation 'io.undertow:undertow-core:2.0.27.Final'
     implementation 'org.slf4j:slf4j-api:1.7.28'
 
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0'
-    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.7'
+    implementation "com.fasterxml.jackson.core:jackson-databind:${JACKSON_VERSION}"
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:${JACKSON_VERSION}"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
@@ -58,7 +60,7 @@ dependencies {
     integrationTestImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
     integrationTestImplementation 'junit:junit:4.12'
 
-    integrationTestImplementation 'org.telegram:telegrambots:4.4.0.1'
+    integrationTestImplementation 'org.telegram:telegrambots:4.9.1'
 
     integrationTestImplementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.12.1'
     integrationTestImplementation 'org.gebish:geb-waiting:2.2'
